# vice-roleplay-asi

./: CLAUDE.md  CMakeLists.txt  README.md
asi/: CMakeLists.txt
asi/include/viceasi/: actions.hpp  bitstream_utils.hpp  game.hpp  hooks.hpp  plugin.hpp
asi/src/: actions.cpp  dllmain.cpp  game.cpp  hooks.cpp  plugin.cpp
asi/src/features/: turnlights.cpp
cmake/: plugin-sdk.cmake
src/: CMakeLists.txt
